<resources>
    <string name="test_appid">1376619469306276</string>
    <string name="main_tabbar_footer_events">Events</string>
    <string name="main_tabbar_footer_friends">Friends</string>
    <string name="main_tabbar_footer_notifications">Notifications</string>
    <string name="main_tabbar_footer_me">Me</string>
    <string name="gmap_api_key_on_my_mac">AIzaSyAqK3euZkbKu69qEnkiGOTq1FfKJNT25ag</string>
    <string name="app_name">Hoothere</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_header_main_title_hoothere">Events</string>
    <string name="tab_header_main_title_hoohere">Friends</string>
    <string name="change_status_want">Looking for plans</string>
    <string name="change_status_available">Available</string>
    <string name="change_status_go_out">Going out</string>
    <string name="change_status_busy">Busy</string>
    <string name="hosted_by">Hosted by</string>
    <string name="invited_title">Invited</string>
    <string name="join_title">Join</string>
    <string name="going_title">Going There</string>
    <string name="hoo_title">Hoo There</string>
    <string name="hoocame_title">Hoo Came</string>
    <string name="past_event">Past Event</string>
    <string name="event_status_accepted">Accepted</string>
    <string name="event_status_went_there">Went There</string>
    <string name="no_event_available">No Event Available</string>
    <string name="no_event_hint">There is no event in your list, do you want to add event in your list?</string>
    <string name="no_event_create">Create Event</string>
    <string name="event_status_pending">Pending</string>
    <string name="event_status_invited">Invited</string>
    <string name="logo_title">When good people come together, great things happen.</string>
    <string name="logo_thanks">Thank you for trying out the Hoothere Android Beta!</string>
    <string name="logo_get_started">Get Started</string>
    <string name="logo_login">Have an account? Log In</string>
    <string name="change_number_title">Change Number</string>
    <string name="change_number_label_1">Please re-enter your phone number</string>
    <string name="change_number_label_2">The verification code will be sent to this number.</string>
    <string name="change_number_button_submit">Submit</string>
    <string name="change_number_edit_hint">Please enter your phone number</string>
    <string name="search_hint">Search</string>
    <string name="pending_text">Pending</string>
    <string name="you">You</string>
    <string name="signin_title">Sign In</string>
    <string name="signin_email_hint">Email</string>
    <string name="signin_pwd_hint">Password</string>
    <string name="signin_forgot_pwd">Forgot Password</string>
    <string name="signin_button_title">Sign In</string>
    <string name="date_not_specified">Date Not Specified</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="event_type_private">Private Event</string>
    <string name="event_type_public">Public Event</string>
    <string name="accept_event">Accept</string>
    <string name="check_in_event">Check In</string>
    <string name="checked_in_event">Checked-In</string>
    <string name="mypast_events">Past Events</string>
    <string name="othere_profile_title">User Profile</string>
	<string name="hoothere_title">Hoothere</string>
	<string name="friends_header_title">Friends</string>
    <string name="search_event_title">Search Event</string>
    <string name="search_event_hint">Search for an event</string>
    <string name="search_event_cancel">Cancel</string>
	<string name="event_detail_title">Event Detail</string>
	<string name="event_detail_edit">Edit</string>
	<string name="event_detail_seeall">See All</string>
	<string name="event_detail_cancel">Cancel</string>
	<string name="event_detail_join">Join Event</string>
	<string name="event_detail_invite_friends">Invite friends</string>
	<string name="event_members_title">0 Going there</string>
	<string name="event_members_your_friends">Your Friends</string>
	<string name="event_members_new_connections">New Connections</string>
	<string name="edit_event_title">Edit Event</string>
	<string name="edit_event_content_title">Title</string>
	<string name="edit_event_content_description">Description</string>
	<string name="edit_event_content_starts_from">Starts from</string>
	<string name="edit_event_content_ends_on">Ends on</string>
	<string name="edit_event_content_event_locaiton">Event Location</string>
	<string name="edit_event_content_venue_title">Venue Name</string>
	<string name="edit_event_content_street_address">Street Address</string>
	<string name="edit_event_content_city">City</string>
	<string name="edit_event_content_state">State</string>
	<string name="edit_event_content_country">Country</string>
	<string name="edit_event_content_zipcode">Zipcode</string>
	<string name="edit_event_content_geofence">Set Geofence</string>
	<string name="edit_event_content_save">Save</string>
	<string name="edit_event_content_switch_title">Do you want other people to be able to search and join this event?</string>
	<string name="my_profile_title">My Profile</string>
	<string name="change_pwd">Password</string>
	<string name="my_hosted_events">My Hosted Events</string>
	<string name="my_profile_logout">Logout</string>
	<string name="verified">Verified</string>
	<string name="verify">Verify</string>
	<string name="signup_fb_title">Sign Up With Facebook</string>
	<string name="signup_fb_proceed">Proceed</string>
	<string name="signup_fb_mobile_hint">Mobile Number</string>
	<string name="signup_fb_message">Please enter your phone number to complete the registration process.</string>
	<string name="signin_fb_btn">Sign In With Facebook</string>
	<string name="change_pwd_title">Change Password</string>
	<string name="change_pwd_current_pwd">Current Password</string>
	<string name="change_pwd_new_pwd">New Password</string>
	<string name="change_pwd_confirm_pwd">Confirm Password</string>
	<string name="change_pwd_cancel">Cancel</string>
	<string name="change_pwd_save">Save</string>
	<string name="reside_menu_item_events">Events</string>
	<string name="reside_menu_item_friends">Friends</string>
	<string name="reside_menu_item_settings">Settings</string>
	<string name="reside_menu_logout">Logout</string>
	<string name="you_are_alone">You are alone here</string>
	<string name="click_search_button">Click on search button to search your friends.</string>
	<string name="forgot_pwd_title">Forgot Password</string>
	<string name="forgot_pwd_email_hint">Email</string>
	<string name="forgot_pwd_description">Enter your Hoothere Email Id. We will send an email to this with the new password.</string>
	<string name="other_profile_title"></string>
	<string name="other_profile_action_remove">Remove Friend</string>
	<string name="other_profile_action_send_request">Send Friend Request</string>
	<string name="other_profile_action_pending_request">Pending Request</string>
	<string name="ce_name_title">Create Event</string>
	<string name="ce_name_hint">Create your own</string>
	<string name="ce_name_event_hint">Name of your event</string>
	<string name="ce_name_description_hint">Description</string>
	<string name="ce_name_search">Search for event</string>
	<string name="ce_name_create">Create</string>
	<string name="ce_name_cancel">Cancel</string>
	<string name="ce_date_title">Event Date</string>
	<string name="ce_date_start">Starting From</string>
	<string name="ce_date_end">Ending On</string>
	<string name="ce_date_skip">Skip</string>
	<string name="ce_date_next">Next</string>
	<string name="ce_date_no_date">No Date Selected</string>
	<string name="ce_date_hint_start">Please select the start date of your event</string>
	<string name="ce_date_hint_end">Please select the end date of your event</string>
	<string name="ad_search">Search For Location</string>
	<string name="ad_enter_yourself">Enter Address Yourself</string>
	<string name="ad_or">Or</string>
	<string name="am_get_current_location">Click location icon to get your current location</string>
	<string name="am_skip">Skip</string>
	<string name="am_next">Next</string>
	<string name="search_location_title">Search Venue Location</string>
	<string name="search_location_cancel">Cancel</string>
	<string name="notification_title">Notifications</string>
	<string name="loading_more_notifications">Loading more notifications...</string>
	<string name="signup_title">Sign Up</string>
	<string name="signup_hint_firstname">First Name</string>
	<string name="signup_hint_email">Email</string>
	<string name="signup_hint_mobile_number">Mobile Number</string>
	<string name="signup_hint_password">Password</string>
	<string name="signup_hint_confirm_pwd">Confirm Password</string>
	<string name="signup_or">Or</string>
	<string name="signup_create_account">Create Account</string>
	<string name="signup_fb_sign">Sign Up With Facebook</string>
	<string name="signup_terms_of_use_title">By logging in, I am agreeing to Hoothere\'s </string>
	<string name="signup_terms_of_use">Terms Of Services</string>
	<string name="verify_number_title">Verify Your Number</string>
	<string name="verify_number_alert">Enter your verification code</string>
	<string name="verify_number_hint1">It will arrive shortly via text message on</string>
	<string name="verify_number_hint2">your number</string>
	<string name="verify_number_code_hint">Verification</string>
	<string name="verify_number_not_received_yet">Not received code yet?</string>
	<string name="verify_number_change">Change Number</string>
	<string name="mypast_events_header_title">My Past Events</string>
	<string name="upcoming_events_title">Upcoming Events</string>
	<string name="invite">Invite</string>
	<string name="invite_friends_title">Invite Friends</string>
	<string name="invite_friends_invite">Invite Now</string>
	<string name="invite_friends_inviting">Inviting...</string>
	<string name="frag_event_location_map_skip">Skip</string>
	<string name="frag_event_location_map_done">Done</string>
	<string name="alert_dlg_no_internet_connection">Internet connection error! Please check your Internet Connection.</string>
	<string name="alert_dlg_title_hoothere">Hoothere</string>
	<string name="alert_dlg_fb_signup_empty_email">Email Address cannot be blank.</string>
	<string name="alert_dlg_fb_signup_empty_mobile">Mobile number cannot be blank.</string>
	<string name="alert_dlg_fb_signup_error">An error occurred while signing in Facebook.</string>
	<string name="alert_dlg_unable_to_share_image">Unable to share image right now.</string>
	<string name="alert_dlg_share_image_error">An error occurred while sharing image.</string>
	<string name="alert_dlg_display_event_members_error">An error occurred while displaying event members.</string>
	<string name="alert_dlg_message_ce">Please enter event name and its description.</string>
	<string name="alert_dlg_fb_signin_prior">You should login with Facebook.</string>
	<string name="alert_dlg_btn_ok">OK</string>
	<string name="alert_dlg_ya_sure">Ya Sure</string>
	<string name="alert_dlg_yes">Yes</string>
	<string name="alert_dlg_cancel">Cancel</string>
	<string name="alert_dlg_done">Done</string>
	<string name="alert_dlg_message_ce_date">If you don\'t set the time then we won\'t be able to let you know when people get to your event. Skip Anyway?</string>
	<string name="alert_dlg_message_ce_date_invalid_start">Please enter a valid start date of an event.</string>
	<string name="alert_dlg_message_ce_date_invalid_end">Please enter a valid end date of an event.</string>
	<string name="alert_dlg_message_ce_date_start_later_than_end">Please enter end date later than start date.</string>
</resources>