<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    
	<RelativeLayout 
        android:id="@+id/rl_frag_ce_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_purple">
        
		<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:padding="10dp">
		    
		    <ImageView
		        android:id="@+id/iv_frag_ce_header_back"
		        android:layout_width="30dp"
		        android:layout_height="45dp"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:paddingRight="10dp"
		        android:layout_centerVertical="true"
		        android:src="@drawable/icon_header_back_white"
		        android:scaleType="fitCenter"/>
		    
		    <TextView
		        android:id="@+id/txt_frag_ce_header_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:gravity="center"
		        android:text="@string/ce_name_title"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:textColor="@android:color/white"/>
		</RelativeLayout>        
    </RelativeLayout>
    
	<LinearLayout 
	    android:id="@+id/ll_frag_ce_name_content"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@+id/rl_frag_ce_header"
	    android:orientation="vertical"
		android:padding="20dp">
	    
	    <RelativeLayout 
	        android:id="@+id/rl_frag_ce_name_hint"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView
	            android:id="@+id/txt_frag_ce_name_hint"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:textSize="16sp"
	            android:textColor="@color/color_text_gray_858585"
	            android:text="@string/ce_name_hint"/>
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:id="@+id/rl_frag_ce_name_content_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp">
	        
	        <EditText
	            android:id="@+id/edt_frag_ce_name_event_name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@color/color_light_gray_f7f7f7"
	            android:padding="10dp"
	            android:textColor="@android:color/black"
	            android:textSize="18sp"
	            android:text=""
	            android:inputType="textCapSentences"
	            android:textColorHint="@color/color_text_gray_858585"
	            android:hint="@string/ce_name_event_hint"/>
	    </RelativeLayout>
	    
	    <RelativeLayout 
	        android:id="@+id/rl_frag_ce_name_content_address"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp">
	        
	        <EditText
	            android:id="@+id/edt_frag_ce_name_event_description"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@color/color_light_gray_f7f7f7"
	            android:padding="10dp"
	            android:gravity="start"
	            android:textColor="@android:color/black"
	            android:textSize="18sp"
	            android:text=""
	            android:textColorHint="@color/color_text_gray_858585"
	            android:minLines="2"
	            android:inputType="textCapSentences"
	            android:hint="@string/ce_name_description_hint"/>
	    </RelativeLayout>
	    
	    <RelativeLayout 
            android:id="@+id/rl_frag_ce_name_event_setting_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
        
            <TextView
                android:id="@+id/txt_frag_ce_name_event_setting_switch_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/sw_frag_ce_name_event_setting_switch"
                android:layout_centerVertical="true"
                android:text="@string/edit_event_content_switch_title"
                android:textSize="14sp"
                android:textColor="@color/color_text_gray_858585"/>
                
			<Switch
			    android:id="@+id/sw_frag_ce_name_event_setting_switch"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentRight="true"
			    android:layout_centerVertical="true"
			    android:text=""
			    android:textOn="Yes"
			    android:textOff="No"/>
        </RelativeLayout>
	    
	    <LinearLayout 
	        android:id="@+id/ll_frag_ce_name_event_action"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="40dp">
	        
	        <RelativeLayout 
	            android:id="@+id/rl_frag_ce_name_event_cancel"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1">
	            
		        <Button
		            android:id="@+id/btn_frag_ce_name_event_cancel"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="5dp"
		            android:padding="5dp"
		            android:background="@drawable/bg_round_white_10"
		            android:textColor="@color/color_purple"
		            android:textSize="20sp"
		            android:text="@string/ce_name_cancel"/>
	        </RelativeLayout>
	        
	        <RelativeLayout 
	            android:id="@+id/rl_frag_ce_name_event_create"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1">
	            
		        <Button
		            android:id="@+id/btn_frag_ce_name_event_create"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="5dp"
		            android:padding="5dp"
		            android:background="@drawable/bg_round_purple"
		            android:textColor="@android:color/white"
		            android:textSize="20sp"
		            android:text="@string/ce_name_create"/>
	        </RelativeLayout>
	    </LinearLayout>
	    
	    <RelativeLayout 
	        android:id="@+id/rl_frag_ce_name_or"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp">
	        
	        <RelativeLayout 
	            android:id="@+id/rl_frag_ce_name_divider_left"
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:layout_centerVertical="true"
	            android:layout_toLeftOf="@+id/txt_frag_ce_name_or"
	            android:layout_marginRight="5dp"
	            android:background="@color/color_text_pending_a5a5a5"/>
	        
	        <TextView
	            android:id="@+id/txt_frag_ce_name_or"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:textColor="@color/color_text_gray_858585"
	            android:textSize="17sp"
	            android:text="@string/ad_or"/>
	        
	        <RelativeLayout 
	            android:id="@+id/rl_frag_ce_name_divider_right"
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:layout_centerVertical="true"
	            android:layout_toRightOf="@+id/txt_frag_ce_name_or"
	            android:layout_marginLeft="5dp"
	            android:background="@color/color_text_pending_a5a5a5"/>
	    </RelativeLayout>
	    
	    <RelativeLayout 
            android:id="@+id/rl_frag_ce_name_event_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            
	        <Button
	            android:id="@+id/btn_frag_ce_name_event_search"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:background="@drawable/bg_round_purple"
	            android:textColor="@android:color/white"
	            android:textSize="20sp"
	            android:text="@string/ce_name_search"/>
        </RelativeLayout>
	</LinearLayout>
	
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/rl_frag_ce_header">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/header_shadow"
            android:scaleType="fitXY"
            android:alpha="0.3"/>
    </RelativeLayout>
</RelativeLayout>
